# project5

./: README.md  pyproject.toml  setup.py
.github/workflows/: test_cluster.yml
cluster/: __init__.py  codeTrials.ipynb  kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
