[build-system]
requires = [
			"flit_core >=3.2,<4",
			"python_version >= '3.7'"
			]
build-backend = "flit_core.buildapi"

[project]
name = "cluster"
authors = [{name = "Grace Ramey", email = "Grace.Ramey@ucsf.edu"}]
readme = "README.md"
licence = {file = "LICENCE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ['numpy', 'scipy']